Fix repeat operation caused by memory store

In order to do the store memory operation the stack has to
be evaluated by a EnterEqual() operation which would cause
a repeat of the last operation.

This introduces a argument to inhibit this behavior in undesireable
places.

BUG: 431331